--- a/client/styles/_nav.scss
+++ b/client/styles/_nav.scss
@@ -7,8 +7,14 @@ nav {
 
   a {
     font-family: 'Amatic SC';
-    font-size: 2.2rem;
+    font-size: 2rem;
     color: var(--black);
     text-decoration: none;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  nav a {
+    font-size: 1.75rem;
   }
 }
